# cwr

./: Cargo.toml
src/: events.rs  lib.rs  main.rs  player.rs  states.rs  systems.rs
src/components/: player.rs  world.rs
src/dev/: debug.rs  mod.rs
src/entity/: mod.rs
src/entity/player/: systems.rs
src/game/: mod.rs
src/game/entity/player/: components.rs  mod.rs  resources.rs  systems.rs
src/game/entity/player/area/: components.rs  mod.rs  resources.rs  systems.rs
src/game/world/: components.rs  events.rs  mod.rs  systems.rs
src/game/world/area/: mod.rs  resources.rs  systems.rs
src/game/world/block/: components.rs
src/game/world/block/family/: components.rs
src/game/world/generation/: constants.rs  mod.rs  systems.rs
src/game/world/generation/pos/: mod.rs  (+2 more)
src/game/world/realm/: resources.rs
src/game/world/voxel/: mod.rs  resources.rs
src/main_menu/: components.rs  mod.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/plugins/: debug.rs  mod.rs  plugins.rs
src/render/: constants.rs  materials.rs  mod.rs  resources.rs  systems.rs
src/render/mesh/: components.rs  mod.rs  resources.rs  systems.rs
src/resouces/: mod.rs  movement_settings.rs
src/systems/: player.rs  world.rs
src/util/: mod.rs
src/util/math/: mod.rs
src/utils/: maths.rs
src/world/: components.rs  events.rs  mod.rs  systems.rs
src/world/chunk/: components.rs  mod.rs  systems.rs
src/world/game/: mod.rs
src/world/game/terrain/: mod.rs  systems.rs
src/world/grid/: mod.rs  systems.rs
src/world/noise/: components.rs  mod.rs  resources.rs  systems.rs
(+18 files in other folders)
