[package]
name = "cwr"
version = "0.1.0"
edition = "2024"



[dependencies]
bevy = "0.15.3"
bevy_dev_tools  = "0.15.3"
binary-greedy-meshing = "0.3.6"
itertools = "*"
dashmap = "*"
parking_lot = "*"
crossbeam ="*"
bracket-noise="*"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
